--- a/html/heroes/css/styles.css
+++ b/html/heroes/css/styles.css
@@ -1,50 +1,151 @@
-/* Hoja de estilos */
+/* Nuestra hoja de estilos */
 
-@import 'reset.css';
 
-/* variables globales */
-:root {
-    --blanco: #FFF;
-    --marron: peru;
-    --verde: lime;
-    --negro:#000;
+* { 
+    margin: 0;
+    padding: 0;
 }
 
-/* media para impresoras, también se puede declarar en html */
-@media print {
-    body {
-        font-size: 10pt;
-        color: green;
-    }
+
+/* varibales globales */
+:root {
+    --color-primary: #e52326;
+    --color-accent: #E6A622;
+    --blanco: #FFF;
+    --negro: #202020;
+    --marron: peru;
+    --verde: lime;
+    --rosa: pink;
+    --gris-ligth: #f7f7f7;
+    --gris-medium: #6f777b;
+    --gris-dark: #333;
+}
+
+/*
+@font-face {
+    font-family: Roboto;
+    src: url("https://i.annihil.us/u/prod/marvel/font/roboto/Roboto-Regular.ttf") format("truetype")
+}
+*/
+
+
+/* estilos a todas las etiquetas */
+
+body {
+    color: var(--negro);
+    font-size: 1rem; /* 16px */
+    line-height: 1.3rem;
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
+    box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 1rem 0;
+    color: var(--color-primary);
+}
+
+
+h1 {   
+    text-align: center;
+    text-transform: capitalize;
+    margin: 1.5rem 0;
+    color: var(--blanco);
+}
+
+h2 {
+    margin: 2rem 0 1.5rem 0;
+}
+
+
+p {
+    margin: 1rem 0;
+}
+
+a {
+    text-decoration: none; /* quitar rayita de abajo al los enlaces */
+    cursor: pointer;  /* cambiar icono de flecha a mano */
+}
+
+li {
+    list-style: none;
+}
+
+
+main, .container {
+    max-width: 1024px;
+    box-sizing: border-box;  /* si tenemos padding o border lo descuenta del hancho, no los suma */
+    margin: auto; /* centrar el contenido en horizontal */
 }
 
 header {
-    /*background-color: var(--marron);*/
-    /* prefijos para dar soporte a diferentes navegadores:
-
-    -moz- para Firefox y los demás navegadores de Gecko,
-    -webkit- para los navegadores WebKit: Chrome, Safari, Edge, etc.
-    -ms- para Microsoft (Internet Explorer),
-    -o- para Presto, el antiguo motor de Opera.
-
-    */
-    background-image: -o-linear-gradient(top, #D7D 0%, #068 100%);
-    background-image: -webkit-linear-gradient(top, #D7D 0%, #068 100%);
-    background-image: -ms-linear-gradient(top, #D7D 0%, #068 100%);
-    color:var(--blanco);
+    background-color: var(--negro);
+    padding: 0.25rem;
 }
 
-section {
-    background-color: var(--verde);
+
+main {
+    background-color: var(--gris-ligth); 
+    padding: 1rem;
 }
 
 footer {
-    background-color: pink;
+    background-color: var(--gris-ligth);
+    color: var(--gris-medium);
+    border-top: 1px solid var(--gris-medium);
+    padding: 1rem;    
 }
 
-h1 {
+footer .container {
+    display: flex;
+}
+
+footer a {
+    color: var(--gris-medium);
+}
+
+
+footer section {
+    width: 100%;
+}
+
+nav#header {
+    background-color: var(--color-primary);
+    color: var(--blanco);
+    padding: 10px;
+    position: sticky;
+    top: 0;
+}
+
+nav#header a { 
+    color: #FFF; 
+}
+
+nav#header ul {
+
+    /* posicionar los LIs en horizontal y dividir el spacio */
+    display: flex;
+    justify-content: space-between;
+}    
+
+nav#header ul li {
+    list-style: none; /* quitar puntito */    
+    width: 100%;
     text-align: center;
-    text-transform: capitalize;
-    color: var(--negro);
-    
+    padding: 5px 0;
+}   
+
+nav#header ul li:hover {
+    background-color: var(--color-accent);
+}    
+
+.logo{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.text-right {
+    text-align: right;
 }
