--- a/html/primer-proyecto/css/styles.css
+++ b/html/primer-proyecto/css/styles.css
@@ -18,9 +18,38 @@
     }
 }
 
+body {
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.2rem;
+    text-align:justify;
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--negro);
+
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: #2f363c;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-weight: 700;
+    line-height: 1.25;
+    text-align: center;
+    font-size: 2em;
+    text-transform: capitalize;
+}
+
+h3, h4 {
+    font-size: 1.8em; 
+}
+
+h5, h6 {
+    font-size: 1.4em;
+}
+/*
 p { color: red; }
 p { color: blue; }
-
+*/
 header {
     /*background-color: var(--marron);*/
     /* prefijos para dar soporte a diferentes navegadores:
@@ -45,9 +74,4 @@ footer {
     background-color: pink;
 }
 
-h1 {
-    text-align: center;
-    text-transform: capitalize;
-    color: var(--negro);
-    
-}
+
