--- a/html/heroes/css/styles.css
+++ b/html/heroes/css/styles.css
@@ -58,6 +58,10 @@ h2 {
     margin: 2rem 0 1.5rem 0;
 }
 
+div.container {
+    display: flex;
+    justify-content: center; 
+}
 
 p {
     margin: 1rem 0;
@@ -148,4 +152,15 @@ nav#header ul li:hover {
 
 .text-right {
     text-align: right;
+}
+
+.imagen-flotante {
+    float: left;
+    margin-right: 25px;
+    margin-bottom: 20px;
+}
+
+img {
+    widows: 100%;
+    height:auto;
 }
